<resources>
    <string name="app_name">TurqTodo</string>
    <string name="app_description">For lefties, now in turquoise!</string>
    <string name="addListButton" />
    <string name="darkTeal">#025E5D</string>
    <!-- Activity values -->
    <string name="text">text</string>
    <string name="removelist">removeList</string>
    <string name="openlist">openList</string>
    <string name="open">OPEN</string>
    <string name="temporaryText">[temporaryText]</string>
</resources>