<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/custom"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/openList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/list_textView"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:text="@string/open"
        android:textAlignment="center"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/list_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/openList"
        android:layout_toStartOf="@+id/removeList"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="normal"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/listProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/openList"

        />

    <ImageButton
        android:id="@+id/removeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/list_textView"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white"
        android:gravity="end"
        android:src="@android:drawable/btn_dialog"
        android:contentDescription="@string/removelist" />

</RelativeLayout>