<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <!--
    <ScrollView
        android:id="@+id/scrollViewLists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/listTitle"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todoListListing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    -->


    <View
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#025E5D"/>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="@id/overview"
        app:layout_constraintTop_toTopOf="@id/overview"
        app:layout_constraintBottom_toTopOf="@id/appDescription"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintBottom_toBottomOf="@id/overview"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/listsOverview_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:scrollbars="none" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="bottom|start"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/addListButton"
        />

    <!--
        <LinearLayout
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewLists"
            tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/addListButton"
            />

        </LinearLayout>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>